--- a/src/app/aboutme/aboutme.component.html
+++ b/src/app/aboutme/aboutme.component.html
@@ -1,7 +1,7 @@
 <section class="relative px-6 py-20 bg-gradient-to-br from-white to-gray-100 dark:from-[#0f172a] dark:to-[#1e293b]">
   <h2 scrollAnimation [animation]="'fade-in-up'" [delay]="0"
       class="text-3xl md:text-4xl font-bold text-center text-gray-900 dark:text-white mb-12">
-    About Me
+    About
   </h2>
 
   <p scrollAnimation [animation]="'fade-in-up'" [delay]="200"
@@ -9,6 +9,6 @@
     Hi, I’m <strong class="text-indigo-600 dark:text-indigo-400">Gbb</strong> — a detail-oriented Data Analyst with a passion for transforming complex datasets into clear, actionable insights. With hands-on experience in
     <span class="font-semibold">Python, SQL, Excel, and Power BI</span>, I love solving real-world problems using data.
     <br /><br />
-    My approach combines analytical thinking, storytelling, and technical expertise to support data-driven decisions that create impact.
+    My sds approach combines analytical thinking, storytelling, and technical expertise to support data-driven decisions that create impact.
   </p>
 </section>
